<?xml version="1.0"?>
<package>
  <name>remy_me212</name>
  <version>0.0.0</version>
  <description>The remy_me212 package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>math</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>odrive</build_depend>
  <build_depend>odrive_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>math</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>odrive</run_depend>
  <run_depend>odrive_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
